@startuml

class IPhone {
    - marca: String
    - modelo: String
    - capacidadeArmazenamento: int
}

interface ReprodutorMusical {
    + tocar(): void
    + pausar(): void
    + selecionarMusica(musica: String): void
}

interface AparelhoTelefonico {
    + ligar(numero: String): void
    + atender(): void
    + iniciarCorreioVoz(): void
}

interface NavegadorInternet {
    + exibirPagina(url: String): void
    + adicionarNovaAba(): void
    + atualizarPagina(): void
}

IPhone --|> ReprodutorMusical
IPhone --|> AparelhoTelefonico
IPhone --|> NavegadorInternet

@enduml